fixing CSS bug on safari

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -718,6 +718,14 @@
 
   main {
     overflow: visible;
+
+    section {
+      overflow: hidden;
+    }
+
+    .promo {
+      overflow-x: hidden;
+    }
   }
 
   #promo--hybrid-vs-native {
